[tool.poetry]
name = "hunta-backend"
version = "0.1.0"
description = "Backend for Hunta search"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "hunta" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
scipy = "1.10.1"
numpy = "^2.0.0"
pillow = "^11.3.0"
torch = "^2.3.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"